# gbcpp_emu

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
app/: CMakeLists.txt  emulator.cpp  emulator_session.cpp  emulator_session.h  gameboy_ui.h
app/include/cartridge/: cartridge_header.h
app/include/cpu/: cpu.h  instructions.h
app/include/mmu/: mmu.h
app/include/utils/: logger.h  utils.h
docs/: save-state-plan.md
lib/: CMakeLists.txt
lib/include/cartridge/: battery.h  battery_saver.h  cartridge.h  cartridge_factory.h  cartridge_metadata.h  mbc1.h  mbc1_cart.h  mbc3.h  mbc5.h  no_mbc.h
lib/include/cpu/: cpu.h  cpucontext.h  executor.h  instruction_handlers.h  instructions.h  interrupt.h  interrupt_type.h  timer.h  utils.h
lib/include/io/: debug.h  device.h  gamepad.h  lcd.h
lib/include/mmu/: dma.h  mmu.h  ram.h
lib/include/ppu/: oam_data.h  oam_freelist.h  ppu.h  ppu_context.h  ppu_fsm.h
lib/include/utils/: logger.h  utils.h
lib/src/: cpu.cpp  device.cpp  dma.cpp  emulator_session.cpp  executor.cpp  gamepad.cpp  instruction_handlers.cpp  instructions.cpp  interrupt.cpp  mbc1.cpp  mbc3.cpp  mbc5.cpp  mmu.cpp  ram.cpp  timer.cpp
lib/tests/: CMakeLists.txt  test_cpu_context.cpp  test_gamepad.cpp
